tests/baselines/reference/unusedTypeParameterInLambda2.errors.txt
tests/cases/compiler/unusedTypeParameterInLambda2.ts(3,17): error TS6133: 'T' is declared but never used.


==== tests/cases/compiler/unusedTypeParameterInLambda2.ts (1 errors) ====
    class A {
        public f1() {
            return <T, X>() => {
                    ~
!!! error TS6133: 'T' is declared but never used.
                var a: X;
                a;
            }
        }
    }